fixed email address overflow in settings | #1034

--- a/chrome/chrome/settings/settings.css
+++ b/chrome/chrome/settings/settings.css
@@ -17,21 +17,26 @@ body, html { font-family: 'Open Sans', sans-serif, Arial!important; position: re
 a.gray_link { color: #aaa; font-weight: normal; padding-right: 20px; padding-left: 20px; }
 
 .public-profile-container {position: absolute; top: 7px;}
-#public-profile-indicator { border-radius: 4px; border: 1px solid #ccc; display: inline-block; position: relative; width: 175px; height: 32px; opacity: 0; animation: fadeIn 1s 1s ease; animation-fill-mode:forwards;}
+#public-profile-indicator { border-radius: 4px; border: 1px solid #ccc; display: inline-block; position: relative; width: 175px; height: 32px; opacity: 0;
+  animation: fadeIn 1s 1s ease; animation-fill-mode:forwards;}
 #public-profile-indicator a { color: #337ab7;}
 #public-profile-indicator .status-indicator { position: absolute; left: 7px; top: 6px; display: inline-block; width: 17px; height: 17px; background: #ccc; border-radius: 120px; }
 #public-profile-indicator .status-indicator.active { background-image: -webkit-linear-gradient(140deg, #31A217 -40%, green 0%, #31A217 100%); }
 #public-profile-indicator .status-indicator.inactive { background-image: radial-gradient(50% 81%, #FF0000 50%, #C90202 81%);}
-#public-profile-indicator .status-indicator::before { content: "Encrypted Contact Page"; position: absolute; text-align: left; left: 24px; width: 180px; font-size: 12px; font-style: normal;}
-#public-profile-indicator .status-indicator .status-indicator-text { visibility: hidden; width: 600px; background-color: rgba(0,0,0,.85); letter-spacing: 0.3px; color: #fff; padding: 50px; text-align: center; border-radius: 6px; padding: 5px 0; position: absolute; z-index: 1; height: 70px; bottom: 150%; left: -1300%; top: 45px; padding-top: 25px; font-style: normal; font-size: 13px; font-weight: 200!important; transition: .4s; opacity: .7; }
-#public-profile-indicator .status-indicator .status-indicator-text::after { content: ""; position: absolute; top: -20px; left: 50%; margin-left: -5px; border-width: 10px; border-style: solid; border-color: transparent transparent rgba(0,0,0, .85) transparent;}
+#public-profile-indicator .status-indicator::before { content: "Encrypted Contact Page"; position: absolute; text-align: left; left: 24px; width: 180px; font-size: 12px;
+  font-style: normal;}
+#public-profile-indicator .status-indicator .status-indicator-text { visibility: hidden; width: 600px; background-color: rgba(0,0,0,.85); letter-spacing: 0.3px; color: #fff;
+  text-align: center; border-radius: 6px; padding: 5px 0; position: absolute; z-index: 1; height: 70px; bottom: 150%; left: -1300%; top: 45px; padding-top: 25px;
+  font-style: normal; font-size: 13px; font-weight: 200!important; transition: .4s; opacity: .7; }
+#public-profile-indicator .status-indicator .status-indicator-text::after { content: ""; position: absolute; top: -20px; left: 50%; margin-left: -5px; border-width: 10px;
+  border-style: solid; border-color: transparent transparent rgba(0,0,0, .85) transparent;}
 #public-profile-indicator .status-indicator:hover .status-indicator-text { visibility: visible; }
 
 #security_module { min-height: 216px; }
-#alt-accounts .separator { background: black; width: 90%; margin: 5px auto 10px auto!important;height: 1px; opacity: .2; }
 #alt-accounts.accounts-row { display: none;}
 #alt-accounts.accounts-row.active { display: block; animation: fadeInDown .4s;}
-#alt-accounts.accounts-row { background: #f3f3f3; height: auto; padding: 10px 5px 10px 5px; position: absolute; right: -27px; width: 343px;margin: 0 auto; margin-top: 30px; padding-right: 38px; z-index: 10; box-shadow: 0px 1px 3px rgba(0, 0, 0, .3); }
+#alt-accounts.accounts-row { background: #f3f3f3; height: auto; padding: 10px 5px 10px 5px; position: absolute; right: -27px; width: 440px; margin: 0 auto; margin-top: 30px;
+  z-index: 10; box-shadow: 0px 1px 3px rgba(0, 0, 0, .3); font-size: 14px; }
 #alt-accounts.accounts-row .row.alt-accounts { margin: 3px 0; padding: 10px 0; cursor: pointer; height: auto; border: 1px solid #f3f3f3; position: relative; }
 .row.alt-accounts:hover {background: rgba(0, 0, 0, .019); }
 .accounts-options-row {
